added stats
