# api/src/routes/messageRoute.ts
@@ -4,6 +4,7 @@ import * as controller from '../controllers/messageController';
 const router = express.Router({mergeParams: true});
 router.post('/get', controller.get);
 router.post('/channels', controller.channels);
+router.post('/stats', controller.stats);
 router.get('/list', controller.list);
 router.post('/list', controller.list);
 router.get('/listthreaded', controller.listthreaded);
